# qt6debug

./: CMakeLists.txt  flake.nix  main.cpp
